--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,5 +1,3 @@
-<!-- templates/base.html -->
-
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,13 +7,13 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <style>
-            {% block custom_css %} 
+            {% block custom_css %}{% endblock %} 
         </style>
     </head>
     <body>
         <div class="container mt-3 p-5">
-            {% block content %} 
+            {% block content %}{% endblock %} 
         </div>
-        <script src="{% static 'index.js' %}"></script>
+        {% block custom_js %}{% endblock %}
     </body>
 </html>
