--- a/chat/templates/chat/chat.html
+++ b/chat/templates/chat/chat.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-12 col-md-8">
             <div class="mb-2">
-                <label for="chatLog">Room: #{{ room.name }}</label>
+                <label for="chatLog">Room: #{{ chat.name }}</label>
                 <textarea class="form-control" id="chatLog" readonly></textarea>
             </div>
             <div class="input-group">
@@ -35,7 +35,7 @@
             </select>
         </div>
     </div>
-    {{ room.name|json_script:"roomName" }}
+    {{ chat.name|json_script:"roomName" }}
 {% endblock %}
 
 {% block custom_js %}
