--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -6,9 +6,11 @@
         <title>Channels Chat</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <style>
             {% block custom_css %}{% endblock %} 
         </style>
+        {% block custom_link %}{% endblock %}
     </head>
     <body>
         <div class="container mt-3 p-5">
